<resources>
    <string name="app_name">Secure Chat</string>
    <string name="msgSystemInfo">System Info.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="labelBack">Back</string>
    <string name="msgPleaseWait">Please wait...</string>
    <string name="msgVerifyPinCode">Verify PIN code...</string>
    <string name="labelPleaseEnterPinCode">Please enter PIN code</string>
    <string name="msgPinCodeIsIncorrect">PIN code is incorrect, please enter correct PIN code.</string>
    <string name="msgDoesntSupportOti">Unable to access SIM card, please make sure the SIM card is installed.</string>
    <string name="msgCannotReadCardInfo">Unable to read SIM card information, please ensure you have inserted the correct card.</string>
    <string name="msgValidatingYourAccount">Validating your account...</string>
    <string name="menuAccountSignUp">Sign up your account</string>
    <string name="labelEnterYourName">Please enter your name.</string>
    <string name="msgUnableToGetIccid">Unable to get your card ID, please re-enter PIN code to continue.</string>
    <string name="msgGeneratingRsaKey">Generating secret key.</string>
    <string name="msgUnableToGenerateRsaKeyPair">Unable to generate secret key. </string>
    <string name="msgFailToReadPublicKey">Unable to read secret key. </string>
    <string name="msgFailToSignUpAccount">Failed to sign up your account. </string>
    <string name="msgFailedToRetrieveDataFromFirebase">Failed to retrieve message list</string>
    <string name="labelEnterMessage">Enter message...</string>
    <string name="msgPleaseEnterYourMessage">Please enter your message</string>
    <string name="msgClickMeToDecryptMessage">Click me to decrypt message</string>
    <string name="msgDecryptingMessage">Decrypting message, please wait...</string>
    <string name="msgGenerating3DESKey">Preparing secret key.</string>
    <string name="msgFailedToGenerate3DESKey">Failed to generate secret key.</string>
    <string name="msgFailedToWriteReceiverPublicKeyToSIM">Failed to prepare receiver secret key</string>
    <string name="msgFailedToEncryptSecretKeyForReceiver">Failed to encrypt secret key for receiver</string>
    <string name="msgFailedToEncryptSecretKeyForSender">Failed to encrypt secret key for sender</string>
    <string name="msgUnableToFind3DESSecretKey">Unable to find your secret key for encrypting message, please re-login</string>
    <string name="msgFailedToEncryptMessage">Failed to encrypt your message</string>
    <string name="msgUnableToRevert3DESSecretKey">Unable to retrieve the secret key that encrypted this message</string>
    <string name="msgFailedToDecryptMessage">Failed to decrypt your message</string>
    <string name="msgFailedToGetYourImage">Failed to get your image</string>
    <string name="msgUpdateYourProfile">Updating your profile</string>
    <string name="msgFailedToUpdateYourProfile">Failed to updating your profile</string>
    <string name="msgSuccess">Success</string>
    <string name="msgProcessFailed">Process failed</string>
    <string name="labelYourName">Name</string>
    <string name="labelEnterUserName">Enter your name...</string>
    <string name="labelAutoDecryptMessage">Auto decrypt message</string>
    <string name="labelBurnAfterReading">Burn after reading</string>
    <string name="labelUpdate">Update</string>
    <string name="labelChangePhoto">Change photo</string>
    <string name="labelChooseAMethodToChangePhoto">Choose a method to change photo</string>
    <string name="labelUpload">Upload</string>
    <string name="labelCamera">Camera</string>
    <string name="msgProcessBurnAfterReading">Process burn after reading</string>
    <string name="labelUserProfile">Settings</string>
    <string name="labelChangePinCode">Change PIN code</string>
    <string name="labelLogout">Logout</string>
    <string name="labelEnterCurrentPinCode">Enter current PIN code</string>
    <string name="labelEnterNewPinCode">Enter new PIN code</string>
    <string name="labelEnterNewPinCodeAgain">Enter new PIN code again</string>
    <string name="msgChangePinCodeInProgress">Change PIN code in progress</string>
    <string name="msgPleaseEnterNewPinCode">Please enter PIN code</string>
    <string name="msgNewPinCodeIsTooShort">PIN code too short, should be 6~12 characters</string>
    <string name="msgPleaseEnterNewPinCodeAgain">Please enter PIN code again</string>
    <string name="msgNewPinCodesAreNotTheSame">New PIN codes are not the same</string>
    <string name="voice_rec">Recording</string>
    <string name="voice_cancel">Finger up to cancel</string>
    <string name="voice_short">Record time too short</string>
    <string name="voice_failure">Recording failed</string>
    <string name="voice_success">Recording completed</string>
    <string name="msgPleaseRecordAudioFirst">Please record audio first</string>
    <string name="msgFailedToEncryptAudioFile">Failed to encrypt your audio</string>
    <string name="msgEncryptingAndSendingData">Encrypting and sending data</string>
    <string name="msgFailedToStoreYourFile">Failed to send your file</string>
    <string name="msgFailedToFindAudioFile">Failed to find audio file</string>
    <string name="msgFailedToDownloadAudioFile">Failed to download audio file</string>
    <string name="msgFailedToDecryptAudioFile">Failed to decrypt audio file</string>
    <string name="msgClickMeToDecryptAudio">Click me to decrypt audio</string>

    <string name="labelVoiceCall">Voice call</string>
    <string name="msgFailedToInitializeVoiceChatModule">Failed to initialize voice chat module</string>
    <string name="msgFailedToRegisterVoiceChatAccount">Failed to register voice chat account, you are not able to initiate voice chat</string>
    <string name="msgFailedToMakeVoiceCall">Failed to make voice call</string>
    <string name="labrlVoiceCallEnd">Call ended</string>
    <string name="labrlVoiceCallChatting">Voice chatting...</string>
    <string name="labrlVoiceCallRinging">Ringing...</string>
    <string name="labrlVoiceCallInterrupted">Call interrupted! Aborting...</string>
    <string name="msgVoiceChatAbort">Abort</string>
    <string name="msgVoiceChatEndCall">End call</string>
    <string name="labelVoiceChatAcceptCall">Accept</string>
    <string name="labelVoiceChatRejectCall">Reject</string>
    <string name="msgCoudntFindIncomingCall">Counnot find incoming call</string>
    <string name="msgCannotFindCallerInformation">Cannot find caller information</string>
    <string name="labelUnknown">Unknown</string>
    <string name="msgFailedToPickUpTheCall">Failed to pickup the call</string>
    <string name="labelRegistrationNone">Not registered</string>
    <string name="labelRegistrationInProgress">Registration in progress</string>
    <string name="labelRegistrationRetry">Account registration retrying</string>
    <string name="labelRegistrationOk">Account registered</string>
    <string name="labelRegistrationFailed">Account registration failed</string>
    <string name="msgNotRegisteredToSIPServer">You are not registered to voice chat server, unable to make call</string>
</resources>
